--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #13ca5e;
+            background-color: #505050;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #111111;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -166,7 +166,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #111111;
             /* 選択されたカレンダーのセルの背景色を緑色に設定 */
             color: #fff;
             /* 選択されたセルのテキスト色を白に設定 */
@@ -385,7 +385,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #505050;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -416,7 +416,7 @@
 
 <body>
     <div class="container">
-        <h1>サンプル<br>予約フォーム
+        <h1>nail salon sana<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -424,78 +424,109 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
+        <div class="label">ご来店回数※必須</div>
+        <div class="visit-buttons">
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+        </div>
+
         <div class="label">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ブライダルコース</button>
-            <button type="button" onclick="showMenu('female')">シェービングコース</button>
-            <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
+            <button type="button" onclick="showMenu('gelnails')">ジェルネイル</button>
+            <button type="button" onclick="showMenu('Flatrategel')">定額ジェルネイルコース</button>
+            <button type="button" onclick="showMenu('geloff')">ジェルオフ</button>
+            <button type="button" onclick="showMenu('nailcare')">ネイルケア</button>
+            <button type="button" onclick="showMenu('footcare')">フットケア</button>
+            <button type="button" onclick="showMenu('footgelnails')">フットジェルネイル</button>
+            <button type="button" onclick="showMenu('Flatfootgelnails')">定額フットジェルネイルコース</button>
         </div>
 
-        <div id="male" class="menu-section">
+        <div id="gelnails" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ブライダルコース◆</span>
+                <span class="highlight-text">◆ジェルネイル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">洋装プランA〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">洋装プランB〈120分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">洋装プランC〈30分〉</button>
-            </div>
-            <div class="highlight-background">
-                <span class="highlight-text">ブライダルコース：オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">リラックスマッサージ</button>
-            </div>
-        </div>
-
-        <div id="female" class="menu-section">
-            <div class="highlight-background">
-                <span class="highlight-text">◆シェービングコース◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">リラックスコース〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ベーシックコース〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スピードコース〈90分〉</button>
-            </div>
-            <div class="highlight-background">
-                <span class="highlight-text">シェービングコース：オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">ワンカラーオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">ワンカラーオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ラメグラデーションオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">ラメグラデーションオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">フレンチ (クリアベース)オフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">フレンチ (クリアベース)オフ有り</button>
             </div>
         </div>
 
-        <div id="whitening" class="menu-section">
+        <div id="Flatrategel" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆マッサージコース◆</span>
+                <span class="highlight-text">◆定額ジェルネイルコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リラックスマッサージ〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ベーシックマッサージ〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ブロンズコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ブロンズコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">シルバーコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">シルバーコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ゴールドコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">ゴールドコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">プラチナコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">プラチナコースオフ有り</button>
             </div>
+        </div>
+
+        <div id="geloff" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">マッサージコース：オプション</span>
+                <span class="highlight-text">◆ジェルオフ◆</span>
             </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">当店オフ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">他店オフ※ ソフトジェルのみとなります</button>
+            </div>
+        </div>
+
+        <div id="nailcare" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ネイルケア◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">ネイルケア</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">ハンドケア</button>
+            </div>
+        </div>
+
+        <div id="footcare" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆フットケア◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">角質除去</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">角質除去ケア</button>
+            </div>
+        </div>
+
+        <div id="footgelnails" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆フットジェルネイル◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">ワンカラーオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ワンカラーオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">フレンチ (クリアベース)オフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">フレンチ (クリアベース)オフ有り</button>
+            </div>
+        </div>
+
+        <div id="Flatfootgelnails" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆定額フットジェルネイルコース◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">ブロンズコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ブロンズコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">シルバーコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">シルバーコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">ゴールドコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ゴールドコースオフ有り</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">プラチナコースオフ無し</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">プラチナコースオフ有り</button>
             </div>
         </div>
 
@@ -532,6 +563,7 @@
         </div>
 
         <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="info-text">特殊・持ち込み・デザイン・立体アートなど<br>追加したい場合要相談<br>備考欄にご気軽にご連絡下さい♪</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">ご予約内容</div>
@@ -554,7 +586,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: ''
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -566,36 +598,52 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目〈30分〉': 30,
-            '2回目以降〈0分〉': 0
+            '1回目': 0,
+            '2回目以降': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '眉カット〈30分〉': 30,
-            '襟足〈30分〉': 30,
-            '背中(キャミソールライン)〈30分〉': 30,
-            '背中(腰まで)〈30分〉': 30,
-            'デコルテ〈30分〉': 30,
-            '腕〈30分〉': 30,
-            '保湿パック〈30分〉': 30,
-            'ベーシックマッサージ(パック付き)〈30分〉': 30,
-            'リラックスマッサージの(パック付き)〈30分〉': 30,
-            '美白パック〈30分〉': 30
+            '美白パック〈30分〉': 0
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '和装プラン〈30分〉': 30,
-            '洋装プランA〈60分〉': 60,
-            '洋装プランB〈120分〉': 420,
-            '洋装プランC〈30分〉': 30,
-            'リラックスコース〈60分〉': 60,
-            'ベーシックコース〈30分〉': 30,
-            'スピードコース〈90分〉': 90
+            'ワンカラーオフ無し': 90,
+            'ワンカラーオフ有り': 120,
+            'ラメグラデーションオフ無し': 90,
+            'ラメグラデーションオフ有り': 120,
+            'フレンチ (クリアベース)オフ無し': 120,
+            'フレンチ (クリアベース)オフ有り': 120,
+            'ブロンズコースオフ無し': 90,
+            'ブロンズコースオフ有り': 150,
+            'シルバーコースオフ無し': 120,
+            'シルバーコースオフ有り': 150,
+            'ゴールドコースオフ無し': 150,
+            'ゴールドコースオフ有り': 180,
+            'プラチナコースオフ無し': 180,
+            'プラチナコースオフ有り': 210,
+            '当店オフ': 60,
+            '他店オフ※ ソフトジェルのみとなります': 90,
+            'ネイルケア': 60,
+            'ハンドケア': 90,
+            '角質除去': 90,
+            '角質除去ケア': 120,
+            'ワンカラーオフ無し': 90,
+            'ワンカラーオフ有り': 120,
+            'フレンチ (クリアベース)オフ無し': 120,
+            'フレンチ (クリアベース)オフ有り': 150,
+            'ブロンズコースオフ無し': 90,
+            'ブロンズコースオフ有り': 150,
+            'シルバーコースオフ無し': 120,
+            'シルバーコースオフ有り': 150,
+            'ゴールドコースオフ無し': 180,
+            'ゴールドコースオフ有り': 210,
+            'プラチナコースオフ無し': 180,
+            'プラチナコースオフ有り': 210
         };
 
 
@@ -636,8 +684,6 @@
         <p>${visitCountText}</p>
         <hr>
         <p>${selectedSymptomText}</p>
-        <hr>
-        <p>${irradiationsText}</p>
         <hr>
         <p>${selectedDateText}</p>
         <hr>
@@ -969,11 +1015,10 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+                '09:30', '10:00', '10:30', '11:00', '11:30',
                 '12:00', '12:30', '13:00', '13:30',
                 '14:00', '14:30', '15:00', '15:30',
-                '16:00', '16:30', '17:00', '17:30',
-                '18:00'
+                '16:00', '16:30', '17:00'
             ];
 
             if (table.rows.length === 0) {
@@ -1050,17 +1095,6 @@
                         continue;
                     }
 
-                    // 18時以降に終了する予約を不可にする (17:30は可)
-                    if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    } else if (slotEnd.getHours() > 18) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    }
-
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
                     if (slotStart < now) {
@@ -1115,7 +1149,7 @@
                         cell.classList.add('available');
                     }
                     // それ以外の条件
-                    else if (count <= 0) {
+                    else if (count <= 1) {
                         cell.textContent = '◯';
                         cell.classList.add('available');
                     } else {
