--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
 
         .symptoms,
-        .priority,
+        .priority-buttons,
         .menu-sections,
         .irradiations,
         .mr-buttons {
@@ -75,7 +75,7 @@
         }
 
         .symptoms button,
-        .priority button,
+        .priority-buttons button,
         .menu-sections button,
         .irradiations button,
         .mr-buttons button {
@@ -91,7 +91,7 @@
         }
 
         .symptoms button.active,
-        .priority button.active,
+        .priority-buttons button.active,
         .menu-sections button.active,
         .irradiations button.active,
         .mr-buttons button.active {
@@ -245,24 +245,10 @@
         <div class="label">生年月日（例　2000年1月1日）</div>
         <textarea id="message4" rows="1" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">サロンに求める最も優先度が高いものは何ですか？</div>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">スピード</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">クオリティ</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">居心地</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">細やかな説明</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">価格</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">特になし</button>
-        </div>
-
-        <div class="label">サロンに求めるものをもう一つ教えてください。<br>（特になしと答えた人は特になしを選択してください。）</div>
-        <div class="priority">
-            <button type="button" onclick="selectpriority(this)" data-price="15000">スピード</button>
-            <button type="button" onclick="selectpriority(this)" data-price="15000">クオリティ</button>
-            <button type="button" onclick="selectpriority(this)" data-price="15000">居心地</button>
-            <button type="button" onclick="selectpriority(this)" data-price="15000">細やかな説明</button>
-            <button type="button" onclick="selectpriority(this)" data-price="15000">価格</button>
-            <button type="button" onclick="selectpriority(this)" data-price="15000">特になし</button>
+        <div class="label">ご来店回数※必須</div>
+        <div class="priority-buttons">
+            <button type="button" id="firstpriority" onclick="selectpriority(this)">1回目</button>
+            <button type="button" id="repeatpriority" onclick="selectpriority(this)">2回目以降</button>
         </div>
 
         <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
@@ -272,11 +258,13 @@
     <script>
         let selectedSymptom = [];  // 配列として定義
         let selectedpriority = [];  // 配列として定義
+        let visitCount = '';
+        let priorityCount = '';
 
                     // LIFF初期化
                     document.addEventListener('DOMContentLoaded', function () {
                         liff.init({
-                            liffId: '2006813144-gZrP067a' // ここにあなたのLIFF IDを入力
+                            liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
                         }).then(() => {
                             // LIFF初期化成功時の処理
                             console.log('LIFF初期化成功');
@@ -299,74 +287,17 @@
             }
         }
 
-        function selectSymptom(button, treatmentId) {
+        function selectpriority(element) {
             // 選択された日時をリセット
             selectedFullDate = '';
 
-            // ボタンの選択状態を切り替える
-            button.classList.toggle('active');
+            document.getElementById('firstpriority').classList.remove('active');
+            document.getElementById('repeatpriority').classList.remove('active');
+            element.classList.add('active');
+            priorityCount = element.innerText;
 
-            // 選択されたオプションを取得
-            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
-
-            if (updatedSelectedButtons.length === 0) {
-                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
-                selectedMenuTime = 0;
-                selectedSymptom = null; // 選択されたメニューをリセット
-                menuPrice = 0; // メニュー価格をリセット
-            } else {
-                // 1つだけ選択状態にする
-                if (updatedSelectedButtons.length > 1) {
-                    updatedSelectedButtons.forEach(btn => btn.classList.remove('active'));
-                    button.classList.add('active'); // クリックしたボタンだけを選択
-                }
-
-                // 選択されたメニューの時間を取得して保存
-                const selectedMenu = button.textContent;
-                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
-                selectedSymptom = [selectedMenu]; // 選択されたメニュー名を配列として保存
-                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
-            }
-
-            console.log('選択されたメニューの時間:', selectedMenuTime);
-
-            // 表示を更新
-            updateDisplayInfo();
-        }
-
-        function selectpriority(button, treatmentId) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            // ボタンの選択状態を切り替える
-            button.classList.toggle('active');
-
-            // 選択されたオプションを取得
-            const updatedSelectedButtons = document.querySelectorAll('.priority button.active');
-
-            if (updatedSelectedButtons.length === 0) {
-                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
-                selectedMenuTime = 0;
-                selectedpriority = null; // 選択されたメニューをリセット
-                menuPrice = 0; // メニュー価格をリセット
-            } else {
-                // 1つだけ選択状態にする
-                if (updatedSelectedButtons.length > 1) {
-                    updatedSelectedButtons.forEach(btn => btn.classList.remove('active'));
-                    button.classList.add('active'); // クリックしたボタンだけを選択
-                }
-
-                // 選択されたメニューの時間を取得して保存
-                const selectedMenu = button.textContent;
-                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
-                selectedSymptom2 = [selectedMenu]; // 選択されたメニュー名を配列として保存
-                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
-            }
-
-            console.log('選択されたメニューの時間:', selectedMenuTime);
-
-            // 表示を更新
-            updateDisplayInfo();
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
         }
 
         function submitForm() {
@@ -375,21 +306,21 @@
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
-            selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
-            selectedpriority: selectedpriority && selectedpriority.length > 0 ? selectedpriority : null // 空の選択肢をチェック
+            priorityCount: priorityCount
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
                 message,
                 message2,
                 message3,
-                message4
+                message4,
+                priorityCount
             };
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【生年月日】：${formData.selectedSymptom}\n【生年月日】：${formData.selectedpriority}`
+                text: `≪アンケート≫\n【名前】：${formData.message}\n【電話番号】：${formData.message2}\n【住所】：${formData.message3}\n【生年月日】：${formData.message4}\n【生年月日】：${formData.priorityCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
